# PawOS

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  license.mkd
doc/: references.mkd
include/libretro/: libretro.h
include/sdk/: PalmCompatibility.h  PalmOS.h  PalmTypes.h
include/sdk/Core/System/: SystemMgr.h
rom/: CMakeLists.txt
rom/appl-addr/: CMakeLists.txt
rom/appl-lnch/: CMakeLists.txt
rom/appl-memo/: CMakeLists.txt  main.c
rom/appl-npad/: CMakeLists.txt
rom/appl-pref/: CMakeLists.txt
rom/libr-MthL/: CMakeLists.txt
rom/libr-ZLib/: CMakeLists.txt
rom/libr-swrp/: CMakeLists.txt  main.c
rom/panl-digi/: CMakeLists.txt
rom/panl-dttm/: CMakeLists.txt
rom/panl-frmt/: CMakeLists.txt
rom/panl-modm/: CMakeLists.txt
rom/panl-netw/: CMakeLists.txt  main.c
rom/panl-ownr/: CMakeLists.txt
rom/panl-shct/: CMakeLists.txt
src/: CMakeLists.txt
src/cpu/: CMakeLists.txt
src/cpu/m68k/: CMakeLists.txt
src/frontend/: CMakeLists.txt
src/frontend/libretro/: CMakeLists.txt  loop.c
src/handos/: CMakeLists.txt
src/pawos/: CMakeLists.txt
tools/: CMakeLists.txt
