# ---------------------------------------------------------------------------
# HandOS
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# HandOS is under the GNU General Public License v3+, or later.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# Include HandOS support
add_subdirectory(handos)

# Include CPU support
add_subdirectory(cpu)

# Front end support
add_subdirectory(frontend)
