# ---------------------------------------------------------------------------
# PawOS
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# PawOS is under the GNU General Public License v3+, or later.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# Include PawOS support
add_subdirectory(pawos)

# Include CPU support
add_subdirectory(cpu)

# Front end support
add_subdirectory(frontend)
