# ---------------------------------------------------------------------------
# HandOS
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# HandOS is under the GNU General Public License v3+, or later.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# Include m68k support
add_subdirectory(m68k)

# Include ARM support
add_subdirectory(arm)
