# ---------------------------------------------------------------------------
# PawOS
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# PawOS is under the GNU General Public License v3+, or later.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# Include RetroArch Front End
add_subdirectory(libretro)

# Include SDL2 front end
add_subdirectory(sdl2)
