# ---------------------------------------------------------------------------
# HandOS
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# HandOS is under the GNU General Public License v3+, or later.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# Include the DAL library
add_subdirectory(dal)

# Include the Boot library
add_subdirectory(boot)

# Include the UI library
add_subdirectory(ui)
